--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <title>I am not a title, unless?</title>
+    </head>
+
     <body>
-        different text
+        more different text
     </body>
 </html>
