--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     </head>
 
     <body>
-        <h1>I'm a header 1!</h1>
+        <h1>Frequently Used Websites</h1>
+        <ul>
+            <li>YouTube</li>
+            <li>Owl</li>
+            <li>Chess</li>
+        </ul>
         <img src="https://avatars.githubusercontent.com/u/90866356?v=4">
         more different text
     </body>
