--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
         <h1>Frequently Used Websites</h1>
         <ul>
-            <li>YouTube</li>
-            <li>Owl</li>
-            <li>Chess</li>
+            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Youtube</a></li>
+            <li><a href="https://owl.uwo.ca/portal">OWL</a></li>
+            <li><a href="https://www.chess.com">Chess</a></li>
         </ul>
         <img src="https://avatars.githubusercontent.com/u/90866356?v=4">
         more different text
