--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>I am not a title, unless?</title>
+        <title>Jan's First Website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
